objects/nXBI__Business_Credit_Demographics__c.object
<CustomObject>
    <fields>
        <fullName>nXBI__Annual_Sales_Range_Code__c</fullName>
        <label>Annual Sales Range Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nXBI__Annual_Sales_Range__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Annual Sales Range</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nXBI__Business_Credit_Report__c</fullName>
        <label>Business Credit Report</label>
        <referenceTo>nXBI__Business_Credit_Report__c</referenceTo>
        <relationshipName>Business_Demographics</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>nXBI__Business_Type_Code__c</fullName>
        <label>Business Type Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nXBI__Business_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Business Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nXBI__Company_Ownership_Code__c</fullName>
        <label>Company Ownership Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nXBI__Company_Ownership__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Company Ownership</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nXBI__Date_Founded__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Founded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>nXBI__Location_Description_Code__c</fullName>
        <label>Location Description Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nXBI__Location_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Location Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nXBI__Number_Of_Employees_Code__c</fullName>
        <label>Number Of Employees Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nXBI__Number_Of_Employees__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Number Of Employees</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nXBI__Years_In_Business__c</fullName>
        <label>Years In Business</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Business Credit Demographics</label>
    <nameField>
        <displayFormat>BD-{00000000}</displayFormat>
        <label>Business Demographics Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Credit Demographics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>